# ChangeLog for dev-libs/botan
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/botan/ChangeLog,v 1.83 2013/09/18 11:11:26 pinkbyte Exp $

  18 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> botan-1.10.3-r1.ebuild,
  botan-1.10.5.ebuild:
  Drop obsolete python_mod_* functions call

*botan-1.10.5 (18 Sep 2013)

  18 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> +botan-1.10.5.ebuild:
  Version bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> botan-1.10.3-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> botan-1.10.3.ebuild:
  Stable for x86, wrt bug #472290

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> botan-1.10.3.ebuild:
  Stable for ppc, wrt bug #472290

  06 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> botan-1.10.3.ebuild:
  Stable on amd64, wrt bug #472290

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  21 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> botan-1.10.3-r1.ebuild:
  Add ~arm keyword, wrt bug #458438

*botan-1.10.3-r1 (13 Jan 2013)

  13 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> +botan-1.10.3-r1.ebuild:
  Python support per bug#382889, some sync with Arfrever Frehtes Taifersar
  Arahesis work, cleanups

  12 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> botan-1.10.3.ebuild:
  Add bindist USE to disable ecdsa, bug#446226, thanks to Peter Stuge

*botan-1.10.3 (15 Dec 2012)

  15 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> +botan-1.10.3.ebuild:
  Version bump per bug#434050

*botan-1.10.1 (20 Aug 2011)

  20 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org> +botan-1.10.1.ebuild:
  Version bump botan. Used by softhsm.

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> botan-1.8.11.ebuild:
  Convert from "useq" to "use".

  28 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/botan-1.8.8-darwin-install_name-fix.patch,