@@ -4,22 +4,24 @@ Hash: SHA256
 DIST Botan-1.10.1.tbz 2195784 SHA256 205a3c011391d01ca3e4f127a2ffbf993a4f59788ffa45a6df06ef4ff382a89e SHA512 6e1fecf6cb9103428c444a13b89eb21983c054f1327fcc48ff89876749644c1e635e09d8af595e8ff31ab9c657a11cf4953e9c262a6ee42bce3f68370f0636fa WHIRLPOOL 39e881806a4ee24ed75c6ac1cad8cd7ded962026138641da70ea672a45982fe9d8c6d3b41302c5b5b96567809377bcbcf3801aea8e6792f9d5e8705f6b6c3533
 DIST Botan-1.10.3.tbz 2215991 SHA256 e1db6af2deb230699b076cde893ad949f0580d4fd7b030fcd791ae982d184734 SHA512 e14a961dca2ece04b20a574ad1eb4467f1d94ac1c1fb3b66db704d750aa9953dd78e5700065b896eea63effeffdeb6c529cc8de6eea30c3acef851cd7ddb872b WHIRLPOOL 2b400ec5f6bbaf235a88a057a5dbde05987894a6f8cbf3a8fc0447192d42ce13d4fe9a06060ef09d5eaafe5357ee726345b1e753654136f1612a7c7912688fd5
 DIST Botan-1.10.5.tbz 2214817 SHA256 2934c00533847dc93c485081d3ce6aae4a110151a69b587b895241159da77cf3 SHA512 7456eaf2bbdabac9438cdd28dbc0735924480034d848c40039b5b58d52924b4cb065316989d6902201bc62fb5c19cba109b550b6865ca4d11748e3a3a1ececa6 WHIRLPOOL 7fd3de981d55a03925e78a4afcee55c0f3cf7e2dc88bd503f9c5705e5cc73293cf3bdcf3c3fdf54b6d1b77ba7dc32cf6fa46720635b922e368aaf12a39339fcd
+DIST Botan-1.11.4.tbz 2346343 SHA256 ebbcc493ef2f13f536597b72e317462e1503c83f7e18e1fe10887f16b5f4da0f SHA512 c5c521a78b50de6c6e2bba912f0697e507a8432bd7f348e3e41856cc2ed60fea5877df4957d74887419208f8df63224a4c6726c94eef58fc1b255133b1f0ee22 WHIRLPOOL 41a024e3698fa2ede2a5124b6c5d2400e969f2cddfec6e7e9e43e549097dd606d105d6e02d6268e322d98e83300c76eb4f7783ee54699a7fa85addcf9adc3aa2
 DIST Botan-1.8.11.tbz 2808114 SHA256 c3b60a2c3dfcbe7b21626e8459e5134d3cbabe45b6d94f454860b99798739ba4 SHA512 03577a01e464841e7c985ce6323c4eeaf8d5fc968786d058139e8f965d81900ceb17c7e3f54c948b9dbb602717fec0eff153e1f140c4016aef97c7adb317e5d1 WHIRLPOOL a7f1283ca50d52ccff025a74c10cd7b973a196f873b8386e0efc73af84d0e765a127448f999be9e76e90e772dc20950bf0ae9972fad99840b0045caea41ee811
 EBUILD botan-1.10.1.ebuild 2464 SHA256 f349b245dd1646a1d5bb16746a038fb2a95ea1cad33dc8eba9dbf217fbd3050b SHA512 89c65fca3de7ef3e3588e1aa99a3e489b58e3656aed6a99469216e42b8df6066c439ad36fad26949fbb31442661f60f4c821c698a91bdda1da66f266702661a7 WHIRLPOOL 6a4d01719b85b9cb6e97873ce2bbb224764febf25515e86f58f68b0c8f7523ba305fa985788f3705c7343ac37ca2a7fdf597bae722f738cca8c4bb897c740dfa
 EBUILD botan-1.10.3-r1.ebuild 4004 SHA256 36e50715eb45b6cd0fab9999787a3e9248c307b926faca297afff6630aa746ab SHA512 670f8de9a367830aac6560b3bfd97da5eb190b55613009619fb092987cff4ace0e7a031a950e8cdc65e89f760d497f4db7f5057244575d99618be17e83f93f9a WHIRLPOOL 8bff6c316481d11b305662856d5f0c3e8762a948afcd683d5778e4005b190e816ef146e8679b6d69aa7f745eb4dd5eff47cfc2452ab787c418d2b5b9746f388f
 EBUILD botan-1.10.3.ebuild 2545 SHA256 5626f45435a68ddb95b0e1fcb529913d94379eefedf1120337f18b113e4e1efe SHA512 e0157172391f16d01ca9188876de4e3c67017da390649e75196297d5ce83d5817cdbe08911419f325b3221215babe9711322f5843510c8744b7c0542c0aaee05 WHIRLPOOL b084d3d3c5873a447fc5961b660f0612ae55c793802905e0c72e7c36dc5a9a85ed9146960689c8f986d10811fb99631960f0ebb318d04c76982d2f699c32d2cd
 EBUILD botan-1.10.5.ebuild 4114 SHA256 6571b0b0ecc990c2ddbb2335b6cd6a1a06dd2ff89294f2a975f4c384c3c5c648 SHA512 c13f8ca9eed1eb3c7ab831887222d35f8b02d74a9a1b98305835455559f3de9805a1049b8065d0be7320a748fe34bcc390fbdaccfc4cc2dc751c4d6b219c3153 WHIRLPOOL bc557d4e3936b00c35a2233327712b166c5f9acd1075497df6d8dc4730c4e4816b253f3df1db0efda92c7b1f6562c2c16630df89ddb0f94ee549cc3f38a228e5
+EBUILD botan-1.11.4.ebuild 4475 SHA256 fcd8993e6018d68d5c92db7845e9c94dfdb6a948a874069731910a2987ad9135 SHA512 ac920d73ede683714e49d43ce0c2eca33daf806725f03fb8a663eb412544ed17671882bff7da6aa70e25d53a3f581bbaec014b0fd5dcec928b4f2eb489a5979a WHIRLPOOL 176250748a8af4d99dd919e4c9c3725b84f7c6180f2565a608035223daf9308a538edebe31b171c1e410bfc280f99ad129fed1ab10e8e8e1e657c2e79bc1b5cf
 EBUILD botan-1.8.11.ebuild 2461 SHA256 a1e4111c47aa003a7688116652ec43d6a66e863c346b6bd0f744a3f8fd514188 SHA512 7d3dc940f2d0602da995849a7a82d81dead91c7967b089df03ba76092e5f0422af41ff84d48c77da81c57f1b289b8c6c7a9670f7037ecdb4dcfeab504e132549 WHIRLPOOL 440c7e4a9f74cbf5f60a9e1704398feab0423e0f4afa6d23bbcdfe3b0888638ca17331607e8b6e61bce6d94a6c25d8f995a39301c73c36f7948cfe76043c8c62
-MISC ChangeLog 12216 SHA256 66948b45b64538887801a983bf0d6f8f86ffdea51f689cf3f4f24ef5963b6529 SHA512 6fd710cea7d97650cf28522365f07db242b46d7a6f6c5692955cf06796e744e483fb66f37311ba654fd67a7ac59605b6dd17a87c570e62a36e76af1731d63349 WHIRLPOOL 0a390908d8f2a2d57598457882cbef9cb8e05d30e9b508ae4bdd87df576b23590f0d39c3f23860e3594cda77d4ead498e96745e0405382aa8052fc1a8e7414d9
+MISC ChangeLog 12350 SHA256 1e1c80fe5e9f8171846246b3f50e3ee10a9e8ad90b6f435b7ad56de5fb085b16 SHA512 ca44a39be52f8c0ce929701be4f0098f6a087dcc6d58900692ce93b7b69771b02fc523a73490867fa585ad57354d8178f6d1533d436cacaf052c9abb1b2c9da0 WHIRLPOOL 32ae8f2cfb2f84d8763c3012b704ce70ad59bece5b2879f37229821f9112fe339a88f24c149aa50664c54ee0b599e74bd3d85a6190256accff780bc71bb7d652
 MISC metadata.xml 350 SHA256 196dbc029754376fe620edb47310990091e958d480e08c0a409a9f3bdd80f548 SHA512 23c3616a31686d4ce0146ae7d9bbd7da8d339576d4157f64addcbb827db5c1061d4aa000a783ddcbd8e17f58b5bb169c72e76f67db7d4f1c850edd9830af2c03 WHIRLPOOL 77c2ee746679d19c594031c4076f6c76aaa78c95897398b733768058f2005b9b86d1af6b0009f98faf235babf152c1c920429c7b311e775b5770024c29a6e148
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSOYoYAAoJECo/aRed9267r8gH/RRMk0yAnjrIpu507JBB1nH/
-ITaRXBgpQxPbRZENJbp6qr+CXLvc5RB+s3f0i74id+Oc+Mxfnxvxbh0JhybIsicb
-Wu3Ke9TGv7YS6XFryf+hlGzMHU0pGOAC3IQKj8Lliv+SaXQo/96hcFGpzeiK7Ce5
-K7tvZYo4gI0+pkzlVA9q7hbh3OAMHd1lEpI0Jb5KpIxUET7kS60bss/3OQK9rrry
-51veMHQR6ZVsntpIEiQsm/A8msQ3pGyezwpofiDsWpgo/gnh5L73yL/YpwE8+Hcp
-FdVyw65U8S3esqEi99kaiR6vQus/DUCwuKMZKY518+1Cn7r46AJWXg15eNgzkgY=
-=QXXp
+iQEcBAEBCAAGBQJSOabRAAoJECo/aRed9267pZIIAIU1kTGHhEiPgOvEe8isZLGM
+uG9B74n3xBV2md5jliH40AwkL0S5DrLg0dzJR7xhaH6ZEXbR27hYEvpho5dgavtl
+ZtfFz2zcSMsZsTvanHe/jfJtwFUEn1Yauh2Xm0SnFhNVA4jD2DX+1Ejw+ZUSUkQ3
+c1kdLH4idQ9/85V0zJNSCuCur+0eKr+y9YoCIs/PkWW5jRTuZiF65tA8XtQU82tp
+zcMlvfxda7lJt6SvZCPuYLvGIsVuzdNwxy7S+k2yuVv63xjeZIhwuFK0QgVW2mla
+tSMlxvLycOHADMR/VgGbtjIok8tJ3nn9l94UsKMVPNARaTpSYGWY7LpCVPIdfkg=
+=oxnj
 -----END PGP SIGNATURE-----
