@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/botan
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/botan/ChangeLog,v 1.83 2013/09/18 11:11:26 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/botan/ChangeLog,v 1.84 2013/09/18 13:13:58 pinkbyte Exp $
+
+*botan-1.11.4 (18 Sep 2013)
+
+  18 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> +botan-1.11.4.ebuild:
+  Version bump, wrt bug #484678
 
   18 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> botan-1.10.3-r1.ebuild,
   botan-1.10.5.ebuild:
